[project]
name = "boto3-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3-stubs>=1.35.94",
    "boto3>=1.35.94",
    "botocore>=1.35.94",
    "fastapi>=0.115.6",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
]
